--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <script src="script.js"></script>
     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+     <link rel="stylesheet" type="text/css" href="styles.css">
+     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+
 </head>
 
 <body>
+    <img class="logo-background" src="assets/logo-background.png"/>
+    <h1>Harness Netflix's potential as a language-learning tool</h1>
+    
+    <div class="product-description">
+        <p>Testaflix is an app based language learning tool. Scholars state that most of the process of learning a language happens subconsciously by getting comprehensible input. The human brain subconsciously picks up concepts when seeing a language spoken in context and it slowly builds up the structure of the language over time. That is how we all learned our first language. The traditional way of actively learning helps with this process but getting several hours of input in a language spoken in context is necessary to build it up in the brain.</p>
 
+        <p>Netflix is a fantastic source of material where one can get language being in all sorts of contexts, the stories. We have a library of material to enhance the Netflix language learning experience based on different shows within the Netflix catalogue. We provide quizzes and vocabulary sheets made specifically out of individual episodes. In short, what we do is harnessing Netflix’s potential as a language learning tool.</p>
+    </div>
+    <img class="netflix-tv" src="assets/netflix-tv.jpeg"/>
+
+    <!-- Typeform -->
     <div class="typeform-widget" data-url="https://diegostraube.typeform.com/to/dvLeE8" style="width: 100%; height: 500px;"></div> 
     <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=dvLeE8&utm_source=typeform.com-13039498-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 </body>
