--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html>
-
 <head>
     <script src="script.js"></script>
     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
@@ -23,6 +23,4 @@
     <div class="typeform-widget" data-url="https://diegostraube.typeform.com/to/dvLeE8" style="width: 100%; height: 500px;"></div> 
     <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=dvLeE8&utm_source=typeform.com-13039498-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 </body>
-
-
 </html>
