--- a/index.htm
+++ b/index.htm
@@ -3,14 +3,15 @@
 <head>
     <script src="script.js"></script>
     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-     <link rel="stylesheet" type="text/css" href="styles.css">
-     <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <title>Harness Netflix's Potential as a Language-Learning Tool</title>
 
 </head>
 
 <body>
     <img class="logo-background" src="assets/logo-background.png"/>
-    <h1>Harness Netflix's potential as a language-learning tool</h1>
+    <h1>Harness Netflix's Potential as a Language-Learning Tool</h1>
     
     <div class="product-description">
         <p>Testaflix is an app based language learning tool. Scholars state that most of the process of learning a language happens subconsciously by getting comprehensible input. The human brain subconsciously picks up concepts when seeing a language spoken in context and it slowly builds up the structure of the language over time. That is how we all learned our first language. The traditional way of actively learning helps with this process but getting several hours of input in a language spoken in context is necessary to build it up in the brain.</p>
