--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
 	</div>
 </section>
 
-<section class="primary-bg">
-	<div class="container">
-		<div class="row">
+<div class="container">
+	<div class="row">
+		<div class="col-md-3"></div>
+		<div class="col-md-6">
 			<!-- Begin Mailchimp Signup Form -->
 			<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 			<style type="text/css">
@@ -120,7 +121,7 @@
 			<div id="mc_embed_signup">
 			<form action="https://Testaflix.us20.list-manage.com/subscribe/post?u=c21662ae064cef6f7f6d2bec6&amp;id=6272d4c2c2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			    <div id="mc_embed_signup_scroll">
-				<label for="mce-EMAIL">Subscribe</label>
+				<label for="mce-EMAIL">Sign up now to receive a download link once we launch</label>
 				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 			    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c21662ae064cef6f7f6d2bec6_6272d4c2c2" tabindex="-1" value=""></div>
@@ -128,11 +129,11 @@
 			    </div>
 			</form>
 			</div>
-
-			<!--End mc_embed_signup-->
 		</div>
+		<div class="col-md-3"></div>
+		<!--End mc_embed_signup-->
 	</div>
-</section>
+</div>
 
 <section class="primary-bg">
 	<div class="container">
