Full width input

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 			<form action="https://Testaflix.us20.list-manage.com/subscribe/post?u=c21662ae064cef6f7f6d2bec6&amp;id=6272d4c2c2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			    <div id="mc_embed_signup_scroll">
 				<label for="mce-EMAIL" style="text-align: center">Sign up now to receive a download link once we launch</label>
-				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required style="width:100%">
 			    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			    <div style="position: absolute; left: -5000px; width:100%;" aria-hidden="true"><input type="text" name="b_c21662ae064cef6f7f6d2bec6_6272d4c2c2" tabindex="-1" value=""></div>
+			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c21662ae064cef6f7f6d2bec6_6272d4c2c2" tabindex="-1" value=""></div>
 			    <div class=""><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="width:100%"></div>
 			    </div>
 			</form>
