--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					
 					<div class="how_it_work_m text-right">
 						<a href="#"> <i class="fa fa-check-square" aria-hidden="true"></i> </a>
-						<a href="#"> <h5> Callenge yourself </h5> </a>
+						<a href="#"> <h5> Challenge yourself </h5> </a>
 						<p> Users can customize their learning experience by choosing between 3 different difficulties. </p>
 					</div>
 				</div>
